# cmake_tutorial_qt

./: CMakeLists.txt
Projfive/: .ninja_deps  .ninja_log  1-message.cmake  CMakeLists.txt  Projfour  build.ninja
Projfive/src/math/: CMakeLists.txt
Projfive/src/stats/: CMakeLists.txt
projfour/: CMakeLists.txt  main.cpp
projfour/include/: stat.h
projfour/src/: stat.cpp  supermath.cpp
projthree/: CMakeLists.txt  main.cpp
projthree/include/: dog.h  log.h
projthree/src/: dog.cpp  operation.cpp
projtwo/: CMakeLists.txt  main.cpp
projtwo/include/: dog.h  operations.h
projtwo/src/: dog.cpp  operations.cpp
proone/: README.md  main.cpp
